--- a/sass/Layout/_loader.scss
+++ b/sass/Layout/_loader.scss
@@ -8,7 +8,7 @@
     justify-content: center;
     align-items: center;
     background: #000;
-    z-index: 999;
+    z-index: -99;
     animation: loader 1s ease-in-out 2.5s forwards;
   }
 
