--- a/sass/Utils/_animations.scss
+++ b/sass/Utils/_animations.scss
@@ -24,9 +24,13 @@
       position: absolute;
       display: flex;
       opacity: 1;
+      z-index: 100;
     }
     50% {
       opacity: 0.5;
+    }
+    99% {
+      z-index: 100;
     }
     100% {
       position: absolute;
